force-app/main/default/objects/Pre_Calc__c/Pre_Calc__c.object-meta.xml
<CustomObject>
    <label>Pre-Calc</label>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Pre-Calc</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Calcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>