force-app/main/default/objects/Pre_Calc__c/fields/Agent_Commission_lb__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_lb__c</fullName>
    <formula>Agent_Commission_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commission ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>