force-app/main/default/objects/Pre_Calc__c/fields/Agent_Commission_MT__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_MT__c</fullName>
    <label>Agent Commission ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>