force-app/main/default/objects/Pre_Calc__c/fields/Agent_Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Total__c</fullName>
    <formula>Agent_Commission_lb__c
*
(Volume_MT__c * 2204.6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commission ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>