force-app/main/default/objects/Pre_Calc__c/fields/Average_Inventory_Cost_lb__c.field-meta.xml
<CustomField>
    <fullName>Average_Inventory_Cost_lb__c</fullName>
    <label>Average Inventory Cost ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>