force-app/main/default/objects/Pre_Calc__c/fields/Average_Inventory_Cost_MT__c.field-meta.xml
<CustomField>
    <fullName>Average_Inventory_Cost_MT__c</fullName>
    <formula>Average_Inventory_Cost_lb__c * 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Inventory Cost ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>