force-app/main/default/objects/Pre_Calc__c/fields/Average_Inventory_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Average_Inventory_Cost_Total__c</fullName>
    <formula>Volume_MT__c * Average_Inventory_Cost_MT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Inventory Cost ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>