force-app/main/default/objects/Pre_Calc__c/fields/Base_Sale_price_ex_plant_lb__c.field-meta.xml
<CustomField>
    <fullName>Base_Sale_price_ex_plant_lb__c</fullName>
    <label>Base Sale price ex-plant ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>