force-app/main/default/objects/Pre_Calc__c/fields/Base_Sale_price_ex_plant_MT__c.field-meta.xml
<CustomField>
    <fullName>Base_Sale_price_ex_plant_MT__c</fullName>
    <formula>Base_Sale_price_ex_plant_lb__c * 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Sale price ex-plant ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>