force-app/main/default/objects/Pre_Calc__c/fields/Base_Sale_price_ex_plant_Total__c.field-meta.xml
<CustomField>
    <fullName>Base_Sale_price_ex_plant_Total__c</fullName>
    <formula>Base_Sale_price_ex_plant_MT__c * Volume_MT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Sale price ex-plant ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>