force-app/main/default/objects/Pre_Calc__c/fields/Credit_Insurance_lb__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_lb__c</fullName>
    <formula>Credit_Insurance_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Insurance ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>