force-app/main/default/objects/Pre_Calc__c/fields/Credit_Insurance_MT__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_MT__c</fullName>
    <formula>Credit_Insurance_Total__c / Volume_MT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Insurance ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>