force-app/main/default/objects/Pre_Calc__c/fields/Credit_Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Total__c</fullName>
    <formula>Customer_Location__r.Rate__c
*
(
Base_Sale_price_ex_plant_Total__c
+
Dray_Inland_Transport_Total__c
+
Cross_Dock_Warehouse_Total__c
+
Ocean_Freight_Total__c
+
Insurance_Total__c
+
Pallets_Labels_Docs_Total__c
+
CWT_Rebate_Total__c
+
L_C_or_Bank_fees_Total__c
+
Agent_Commission_Total__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Insurance ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>