force-app/main/default/objects/Pre_Calc__c/fields/Cross_Dock_Warehouse_lb__c.field-meta.xml
<CustomField>
    <fullName>Cross_Dock_Warehouse_lb__c</fullName>
    <formula>Cross_Dock_Warehouse_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Dock / Warehouse ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>