force-app/main/default/objects/Pre_Calc__c/fields/Cross_Dock_Warehouse_MT__c.field-meta.xml
<CustomField>
    <fullName>Cross_Dock_Warehouse_MT__c</fullName>
    <formula>Cross_Dock_Warehouse_Cont__c
/
(Volume_MT__c / Planned_of_Total_Containers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Dock / Warehouse ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>