force-app/main/default/objects/Pre_Calc__c/fields/Cross_Dock_Warehouse_Total__c.field-meta.xml
<CustomField>
    <fullName>Cross_Dock_Warehouse_Total__c</fullName>
    <formula>Cross_Dock_Warehouse_lb__c
*
(Volume_MT__c * 2204.6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Dock / Warehouse ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>