force-app/main/default/objects/Pre_Calc__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Location</label>
    <referenceTo>Credit_Insurance_Rate__c</referenceTo>
    <relationshipLabel>Pre-Calcs</relationshipLabel>
    <relationshipName>Pre_Calcs</relationshipName>
    <type>Lookup</type>
</CustomField>