force-app/main/default/objects/Pre_Calc__c/fields/CWT_Rebate_lb__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate_lb__c</fullName>
    <formula>CWT_Rebate_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWT Rebate ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>