force-app/main/default/objects/Pre_Calc__c/fields/CWT_Rebate_Percent__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate_Percent__c</fullName>
    <label>CWT Rebate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>