force-app/main/default/objects/Pre_Calc__c/fields/CWT_Rebate_Total__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate_Total__c</fullName>
    <formula>CWT_Rebate_lb__c
*
(Volume_MT__c * 2204.6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWT Rebate ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>