force-app/main/default/objects/Pre_Calc__c/fields/CWT_Rebate_Y_N__c.field-meta.xml
<CustomField>
    <fullName>CWT_Rebate_Y_N__c</fullName>
    <inlineHelpText>If Yes, &apos;CWT Rebate %&apos; is required.</inlineHelpText>
    <label>CWT Rebate (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>