force-app/main/default/objects/Pre_Calc__c/fields/Date_SO_Written__c.field-meta.xml
<CustomField>
    <fullName>Date_SO_Written__c</fullName>
    <inlineHelpText>System date when HW and Customer come to agreement and data is sent to JDE, in MTMS phase, SO date could also be sent from MTMS to SF</inlineHelpText>
    <label>Date SO Written</label>
    <type>Date</type>
</CustomField>