force-app/main/default/objects/Pre_Calc__c/fields/Dray_Inland_Transport_Cont__c.field-meta.xml
<CustomField>
    <fullName>Dray_Inland_Transport_Cont__c</fullName>
    <label>Dray / Inland Transport ($/Cont)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>