force-app/main/default/objects/Pre_Calc__c/fields/Dray_Inland_Transport_lb__c.field-meta.xml
<CustomField>
    <fullName>Dray_Inland_Transport_lb__c</fullName>
    <formula>Dray_Inland_Transport_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dray / Inland Transport ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>