force-app/main/default/objects/Pre_Calc__c/fields/Dray_Inland_Transport_MT__c.field-meta.xml
<CustomField>
    <fullName>Dray_Inland_Transport_MT__c</fullName>
    <formula>Dray_Inland_Transport_Cont__c
/
(Volume_MT__c / Planned_of_Total_Containers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dray / Inland Transport ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>