force-app/main/default/objects/Pre_Calc__c/fields/Expected_Beginning_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Beginning_Ship_Date__c</fullName>
    <label>Expected Beginning Ship Date</label>
    <type>Date</type>
</CustomField>