force-app/main/default/objects/Pre_Calc__c/fields/Expected_Days_Financed__c.field-meta.xml
<CustomField>
    <fullName>Expected_Days_Financed__c</fullName>
    <label>Expected Days Financed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>