force-app/main/default/objects/Pre_Calc__c/fields/Expected_Profit_Cont__c.field-meta.xml
<CustomField>
    <fullName>Expected_Profit_Cont__c</fullName>
    <formula>(
Cross_Dock_Warehouse_Cont__c
+
Dray_Inland_Transport_Cont__c
+
L_C_or_Bank_fees_Cont__c
+
Ocean_Freight_Cont__c
+
Pallets_Labels_Docs_Cont__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Profit ($/Cont)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>