force-app/main/default/objects/Pre_Calc__c/fields/Expected_Profit_lb__c.field-meta.xml
<CustomField>
    <fullName>Expected_Profit_lb__c</fullName>
    <formula>Total_Selling_Price_lb__c
-
Average_Inventory_Cost_lb__c
-
Selling_Costs_lb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Profit ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>