force-app/main/default/objects/Pre_Calc__c/fields/Expected_Profit_MT__c.field-meta.xml
<CustomField>
    <fullName>Expected_Profit_MT__c</fullName>
    <formula>Total_Selling_Price_MT__c
-
Average_Inventory_Cost_MT__c
-
Selling_Costs_MT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Profit ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>