force-app/main/default/objects/Pre_Calc__c/fields/Expected_Profit_Total__c.field-meta.xml
<CustomField>
    <fullName>Expected_Profit_Total__c</fullName>
    <formula>Total_Selling_Price_Total__c
-
Average_Inventory_Cost_Total__c
-
Selling_Costs_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Profit ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>