force-app/main/default/objects/Pre_Calc__c/fields/Finance_Costs_lb__c.field-meta.xml
<CustomField>
    <fullName>Finance_Costs_lb__c</fullName>
    <formula>Finance_Costs_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Costs ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>