force-app/main/default/objects/Pre_Calc__c/fields/Finance_Costs_MT__c.field-meta.xml
<CustomField>
    <fullName>Finance_Costs_MT__c</fullName>
    <formula>Finance_Costs_Total__c / Volume_MT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Costs ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>