force-app/main/default/objects/Pre_Calc__c/fields/Finance_Costs_Total__c.field-meta.xml
<CustomField>
    <fullName>Finance_Costs_Total__c</fullName>
    <formula>Interest_Rate__c
*
(Expected_Days_Financed__c / 365)
*
(
Base_Sale_price_ex_plant_Total__c
+
Dray_Inland_Transport_Total__c
+
Cross_Dock_Warehouse_Total__c
+
Ocean_Freight_Total__c
+
Insurance_Total__c
+
Pallets_Labels_Docs_Total__c
+
CWT_Rebate_Total__c
+
L_C_or_Bank_fees_Total__c
+
Agent_Commission_Total__c
+
Credit_Insurance_Total__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Costs ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>