force-app/main/default/objects/Pre_Calc__c/fields/Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms__c</fullName>
    <label>Inco Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>