force-app/main/default/objects/Pre_Calc__c/fields/Insurance_lb__c.field-meta.xml
<CustomField>
    <fullName>Insurance_lb__c</fullName>
    <formula>0.003
*
(
Base_Sale_price_ex_plant_lb__c
+
Dray_Inland_Transport_lb__c
+
Cross_Dock_Warehouse_lb__c
+
Ocean_Freight_lb__c
+
Pallets_Labels_Docs_lb__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>