force-app/main/default/objects/Pre_Calc__c/fields/Insurance_MT__c.field-meta.xml
<CustomField>
    <fullName>Insurance_MT__c</fullName>
    <formula>Insurance_lb__c * 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>