force-app/main/default/objects/Pre_Calc__c/fields/L_C_or_Bank_fees_lb__c.field-meta.xml
<CustomField>
    <fullName>L_C_or_Bank_fees_lb__c</fullName>
    <formula>L_C_or_Bank_fees_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L/C or Bank fees ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>