force-app/main/default/objects/Pre_Calc__c/fields/L_C_or_Bank_fees_MT__c.field-meta.xml
<CustomField>
    <fullName>L_C_or_Bank_fees_MT__c</fullName>
    <formula>L_C_or_Bank_fees_Cont__c
/
(Volume_MT__c / Planned_of_Total_Containers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L/C or Bank fees ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>