force-app/main/default/objects/Pre_Calc__c/fields/Name_of_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Payment_Terms__c</fullName>
    <label>Name of Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>