force-app/main/default/objects/Pre_Calc__c/fields/Ocean_Freight_Cont__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_Cont__c</fullName>
    <label>Ocean Freight ($/Cont)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>