force-app/main/default/objects/Pre_Calc__c/fields/Ocean_Freight_lb__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_lb__c</fullName>
    <formula>Ocean_Freight_MT__c / 2204.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ocean Freight ($/lb)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>