force-app/main/default/objects/Pre_Calc__c/fields/Ocean_Freight_MT__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight_MT__c</fullName>
    <formula>Ocean_Freight_Cont__c
/
(Volume_MT__c / Planned_of_Total_Containers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ocean Freight ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>