force-app/main/default/objects/Pre_Calc__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Pre-Calcs</relationshipLabel>
    <relationshipName>Pre_Calcs</relationshipName>
    <type>Lookup</type>
</CustomField>