force-app/main/default/objects/Pre_Calc__c/fields/Pallets_Labels_Docs_MT__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Labels_Docs_MT__c</fullName>
    <formula>Pallets_Labels_Docs_Cont__c
/
(Volume_MT__c / Planned_of_Total_Containers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pallets / Labels / Docs ($/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>