force-app/main/default/objects/Pre_Calc__c/fields/Pallets_Labels_Docs_Total__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Labels_Docs_Total__c</fullName>
    <formula>Pallets_Labels_Docs_lb__c
*
(Volume_MT__c * 2204.6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pallets / Labels / Docs ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>