force-app/main/default/objects/Pre_Calc__c/fields/Planned_of_Total_Containers__c.field-meta.xml
<CustomField>
    <fullName>Planned_of_Total_Containers__c</fullName>
    <inlineHelpText>For determining the quantity of trucks/containers, use 42,000 lbs</inlineHelpText>
    <label>Planned # of Total Containers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>