force-app/main/default/objects/Pre_Calc__c/fields/Product_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Product_Vendor__c</fullName>
    <label>Product Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>