force-app/main/default/objects/Pre_Calc__c/fields/SO__c.field-meta.xml
<CustomField>
    <fullName>SO__c</fullName>
    <displayFormat>SO-{000000}</displayFormat>
    <label>SO#</label>
    <type>AutoNumber</type>
</CustomField>