force-app/main/default/objects/Pre_Calc__c/fields/Total_Selling_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price_Total__c</fullName>
    <label>Total Selling Price ($/Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>