force-app/main/default/objects/Pre_Calc__c/fields/Type_of_Container__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Container__c</fullName>
    <label>Type of Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40&apos; STD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>