force-app/main/default/objects/Pre_Calc__c/fields/Volume_MT__c.field-meta.xml
<CustomField>
    <fullName>Volume_MT__c</fullName>
    <label>Volume (MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>