force-app/main/default/objects/Pre_Calc__c/validationRules/CWT_Rebate_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>CWT_Rebate_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(
ISPICKVAL(CWT_Rebate_Y_N__c,&apos;Yes&apos;),
ISBLANK(CWT_Rebate_Percent__c)
),true,false)</errorConditionFormula>
    <errorDisplayField>CWT_Rebate_Percent__c</errorDisplayField>
    <errorMessage>Value Required if &apos;CWT Rebate&apos; is set to &apos;Yes&apos;</errorMessage>
</ValidationRule>